[FIX] spreadsheet: Force light theme
The "active records" toggle from the domain editor was invisible in
darkmode because it has a whit/transparent image over a forces white
background. This revision forces a dak background limited to the toggle
button so that it becomes visible again.

Task-4081249

closes odoo/odoo#174857

Related: odoo/enterprise#67537

--- a/addons/spreadsheet/static/src/o_spreadsheet/o_spreadsheet_extended.dark.scss
+++ b/addons/spreadsheet/static/src/o_spreadsheet/o_spreadsheet_extended.dark.scss
@@ -32,4 +32,7 @@
       background: #f6f7fa !important;
       border-color: #d5dae8 !important;
   }
+  .o_domain_selector input{
+    background-color: #333 !important;
+  }
 }
